[package]
name = "gluon_news"
version = "0.2.0"
edition = "2021"
description = "A simple graphical news aggregator written in Rust."
license = "MIT OR Apache-2.0"
authors = ["Vasco Costa"]
repository = "https://github.com/vascocosta/gluon_news/"
keywords = ["aggregator", "feed", "news", "reader", "rss"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
feed-rs = "1.3.0"
futures = "0.3.28"
lazy_static = "1.4.0"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
